 - The default products after 2020 changed to the multi-GNSS satellite orbit, clock, bias, quaternion and ERP products, which are computed and released by Wuhan University
 - The table file “leap.sec” needs to be downloaded now, and the “glonass_chn” table file is removed and replaced by the “sat_parameters” table filex
 - GUI version of PRIDE PPP-AR with additional plotting functions
 - Fix known bugs

13. 2022-05-07 (v2.2)
 - install.sh: default table directory can be set outside /home directory
 - pdp3.sh: adjust PCO/PCV models used for different CODE products
 - pdp3.sh: naming patterns for RINEX observation file are more compatible 
 - pdp3.sh: support file paths with spaces
 - pdp3.sh: support old versions of wget
 - table: add M14.ATX

14. 2022-06-20 (v2.2)
 - pdp3.sh: add alerts to some improper operations
 - pdp3.sh: add OFFLINE mode that can save the time from calling wget
 - pdp3.sh: add SA mode for SPP processing
 - pdp3.sh: bug fixes in creating linkage to ANTEX file which may damage this file in batch processing
 - pdp3.sh: bug fixes in unexpected break off in multi-day processing when the first observation file is truncated
 - pdp3.sh: increase the maximum number of days for multi-day processing from 5 to 32

15. 2022-10-28 (v2.2)
 - pdp3.sh: increase the maximum processing interval from 30.0 to 300.0 seconds
 - pdp3.sh: fix syntax errors in some of the output
 - spp: the timestamp of the initial coordinates file are now aligned to the timestamp of observations
 - lsq: fixed some possible fatal issues caused by rounding errors
 - tedit: arguments with decimal comma now no longer causes the run to hang indefinitely

16. 2022-11-21 (v2.2)
 - pdp3.sh: increase the number of decimal places in the time range from two to three
 - pdp3.sh: use IGS Repro3 combination products (IGS2R03FIN) between 1995 and 2020, support PPP-AR after 2000
 - table: add igsR3_2135.atx, remove M14.ATX

17. 2023-01-03 (v2.2)
 - pdp3.sh: support IGS20
 - table: add igs20_2239.atx